--- a/StudentAppProject/src/main/resources/application.properties
+++ b/StudentAppProject/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.password=abhiu
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
-spring.devtools.restart.enabled=true
+#spring.devtools.restart.enabled=true
